--- a/REST-Conference/pom.xml
+++ b/REST-Conference/pom.xml
@@ -85,6 +85,23 @@
 			<version>0.11.5</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+			<version>0.11.5</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-gson</artifactId>
+			<version>0.11.5</version>
+			<scope>provided</scope>
+		</dependency>
+
+
+
 
 	</dependencies>
 
