--- a/REST-Conference/src/main/resources/application.properties
+++ b/REST-Conference/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.idle-timeout=60000
 
+
+spring.jpa.show-sql=true
+
