--- a/REST-Conference/src/main/resources/application.properties
+++ b/REST-Conference/src/main/resources/application.properties
@@ -1,18 +1,28 @@
-#JDBC Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/research
-spring.datasource.username=root
-spring.datasource.password=
+##JDBC Properties
+#spring.datasource.url=jdbc:mysql://localhost:3306/research
+#spring.datasource.username=root
+#spring.datasource.password=
+#
+#spring.jpa.open-in-view=false
+#
+#spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
+#spring.datasource.hikari.connection-timeout=600000
+#spring.datasource.hikari.maximum-pool-size=50000
+#spring.datasource.hikari.max-lifetime=1800000
+#spring.datasource.hikari.minimum-idle=20
+#spring.datasource.hikari.validation-timeout=3000
+#spring.datasource.hikari.idle-timeout=60000
+#
+#
+#spring.jpa.show-sql=true
 
-spring.jpa.open-in-view=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/research
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
-spring.datasource.hikari.connection-timeout=600000
-spring.datasource.hikari.maximum-pool-size=50000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.minimum-idle=20
-spring.datasource.hikari.validation-timeout=3000
-spring.datasource.hikari.idle-timeout=60000
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.format_sql=true
+hibernate.hbm2ddl.auto=none
 
-
-spring.jpa.show-sql=true
 
