--- a/REST-Conference/pom.xml
+++ b/REST-Conference/pom.xml
@@ -24,6 +24,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
@@ -105,6 +116,8 @@
 			<version>0.11.5</version>
 			<scope>provided</scope>
 		</dependency>
+
+
 	</dependencies>
 
 
