--- a/REST-Conference/src/main/resources/application.properties
+++ b/REST-Conference/src/main/resources/application.properties
@@ -1,7 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/research
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.driver-class-name=org.postgresql.Driver
+#Use Render
+spring.datasource.url=jdbc:postgresql://dpg-ch7oon02qv26p1e89log-a.singapore-postgres.render.com:5432/research
+spring.datasource.username=postgres123
+spring.datasource.password=zRVnwnNdiAf80otIeW81ViAFguwKfTSh
+
+#Localhost
+#spring.datasource.url=jdbc:postgresql://localhost:5432/research
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
+
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.format_sql=true
@@ -14,4 +20,6 @@ spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.validation-timeout=3000
 spring.datasource.hikari.idle-timeout=60000
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
