--- a/REST-Conference/src/main/resources/application.properties
+++ b/REST-Conference/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.datasource.hikari.idle-timeout=60000
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-server.address=0.0.0.0
+#server.address=0.0.0.0
